--- a/index.html
+++ b/index.html
@@ -3,50 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <title>Emotion Detector</title>
-  <style>
-    body { font-family: Arial; padding: 2rem; background: #f7f7f7; }
-    textarea, button { width: 100%; padding: 1rem; margin: 1rem 0; }
-    #result { margin-top: 1rem; font-size: 1.2rem; }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Emotion Detection</h1>
-  <textarea id="textInput" rows="4" placeholder="Enter your text here..."></textarea>
-  <button onclick="sendRequest()">Detect Emotion</button>
-  <div id="result"></div>
+<body class="bg-gradient-to-br from-pink-100 via-purple-100 to-blue-100 min-h-screen flex items-center justify-center">
+  <div class="bg-white shadow-lg rounded-2xl p-8 max-w-lg w-full">
+    <h1 class="text-3xl font-bold text-center text-purple-700 mb-6">😊 Emotion Detector</h1>
+
+    <textarea 
+      id="textInput" 
+      rows="4" 
+      placeholder="Enter your text here..." 
+      class="w-full p-4 border-2 border-purple-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-400"
+    ></textarea>
+
+    <button 
+      onclick="sendRequest()" 
+      class="w-full bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 rounded-lg mt-4 transition duration-200"
+    >
+      Detect Emotion
+    </button>
+
+    <div 
+      id="result" 
+      class="mt-6 text-center text-lg font-medium text-gray-800"
+    ></div>
+  </div>
 
   <script>
+    const emojiMap = {
+      joy: "😊",
+      sadness: "😢",
+      anger: "😠",
+      fear: "😨",
+      surprise: "😲",
+      disgust: "🤢",
+      neutral: "😐"
+    };
+
     async function sendRequest() {
       const text = document.getElementById("textInput").value;
       const resultDiv = document.getElementById("result");
 
       if (!text.trim()) {
-        resultDiv.textContent = "Please enter some text.";
+        resultDiv.textContent = "⚠️ Please enter some text.";
         return;
       }
 
-      resultDiv.textContent = "Analyzing...";
+      resultDiv.textContent = "⏳ Analyzing...";
 
       try {
-        const response = await fetch("https://sentiment-14pe.onrender.com/predict", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ text })
-        });
+     const response = await fetch("https://salonik07-sentiment-backend.hf.space/predict", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({ text })
+});
+
 
         if (!response.ok) throw new Error("Server error");
 
         const data = await response.json();
-        resultDiv.innerHTML = `<strong>Emotion:</strong> ${data.emotion}<br><strong>Confidence:</strong> ${data.confidence}`;
+        const emoji = emojiMap[data.emotion.toLowerCase()] || "🔍";
+
+        resultDiv.innerHTML = `
+          <div class="text-2xl">${emoji} <strong>${data.emotion.toUpperCase()}</strong></div>
+          <div class="text-sm text-gray-600 mt-2">Confidence: ${(parseFloat(data.confidence) * 100).toFixed(2)}%</div>
+        `;
       } catch (error) {
-        resultDiv.textContent = "Error: " + error.message;
+        resultDiv.innerHTML = `<span class="text-red-600">❌ Error: ${error.message}</span>`;
       }
     }
   </script>
-
-
-
 </body>
 </html>
